# huawei-2025

./: .gitignore  2025软挑外地学生乘车信息反馈.xlsx  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  auto_tune.py  best_params.txt  cmake_install.cmake  code_craft  code_craft.cpp  dataFeature.md  generateImage.py  info.html  info.md  main  main.cpp  optimization_strategies.md  run.py  temp.cpp  test_params.py
demos/: readme.md
demos/c/: main.c
demos/cpp/: CMakeLists.txt  main.cpp
demos/java/: Main.java
demos/python/: main.py
